--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": ""
+		"compile:styles": "node-sass --include-path scss styles/entry.scss styles/bundle.css",
+		"compile:styles:prefix": "postcss -u autoprefixer -r styles/bundle.css",
+		"styles": "parallelshell 'npm run compile:styles' 'npm run compile:styles:prefix'",
+		"watch:styles": "nodemon --watch styles --ext scss --exec 'npm run styles'",
+		"serve": "browser-sync start -p localhost:3000 --files 'styles/*.css' '**/*.php'",
+		"start": "parallelshell 'npm run serve' 'npm run watch:styles'"
   },
   "repository": {
     "type": "git",
@@ -17,9 +22,11 @@
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.6",
     "browser-sync": "^2.18.8",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
-    "parallelshell": "^2.0.0"
+    "parallelshell": "^2.0.0",
+    "postcss-cli": "^3.0.0-beta"
   }
 }
