--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-		"compile:styles": "node-sass --include-path scss styles/entry.scss styles/bundle.css",
-		"compile:styles:prefix": "postcss -u autoprefixer -r styles/bundle.css",
-		"styles": "parallelshell 'npm run compile:styles' 'npm run compile:styles:prefix'",
-		"watch:styles": "nodemon --watch styles --ext scss --exec 'npm run styles'",
-		"serve": "browser-sync start -p localhost:3000 --files 'styles/*.css' '**/*.php'",
-		"start": "parallelshell 'npm run serve' 'npm run watch:styles'"
+    "compile:styles": "node-sass --include-path scss styles/entry.scss styles/bundle.css",
+    "compile:styles:prefix": "postcss -u autoprefixer -r styles/bundle.css",
+    "styles": "parallelshell 'npm run compile:styles' 'npm run compile:styles:prefix'",
+    "watch:styles": "nodemon --watch styles --ext scss --exec 'npm run styles'",
+    "serve": "browser-sync start -p localhost:3000 --files 'styles/*.css' '**/*.php'",
+    "start": "parallelshell 'npm run serve' 'npm run watch:styles'"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,7 @@
   },
   "author": "Omar Rasool",
   "license": "ISC",
-  "dependencies": {
-    "flexboxgrid": "^6.3.1",
-    "normalize.css": "^5.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.7.6",
     "browser-sync": "^2.18.8",
