--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "jquery": "^3.2.1",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
-    "owl.carousel": "^2.2.0",
     "parallelshell": "^2.0.0",
     "postcss-cli": "^3.0.0-beta",
+    "slick-carousel": "^1.6.0",
     "webpack": "^2.3.2"
   }
 }
